# bazel-python-example

./: .gitignore  README.md  WORKSPACE  requirements.txt
protos/: BUILD.bazel  sorting_service.proto
server/: server.py  server_final.py
