load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//python:defs.bzl", "python_grpc_library")

proto_library(
    name = "sorting_service_proto",
    srcs = ["sorting_service.proto"],
    visibility = ["//visibility:public"],
)

python_grpc_library(
    name = "sorting_service_python_proto",
    protos = [":sorting_service_proto"],
    visibility = ["//visibility:public"],
)